syntax = "proto3";

package blog;

option go_package = "blogpb";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message createBlogRequest{
    Blog blog = 1;
}

message createBlogResponse{
    Blog blog = 1;  // will have blog id
}

message ReadBlogRequest{
    string blog_id = 1;
}

message ReadBlogResponse{
    Blog blog = 1; 
}

message updateBlogRequest{
    Blog blog = 1;
}

message updateBlogResponse{
    Blog blog = 1;  // will have blog id
}

message DeleteBlogRequest{
    string blog_id = 1;
}

message DeleteBlogResponse{
    string blog_id = 1;
}

message ListBlogRequest{
}

message ListBlogResponse{
    Blog blog = 1;  // will have blog id
}

service BlogService {
    rpc CreateBlog(createBlogRequest) returns (createBlogResponse) {};
    rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {};
    rpc UpdateBlog(updateBlogRequest) returns (updateBlogResponse) {};
    rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse) {}; 
    rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse) {};
}